--- a/render.yaml
+++ b/render.yaml
@@ -3,4 +3,4 @@ services:
     name: company-brain
     env: python
     buildCommand: "pip install -r requirements.txt"
-    startCommand: "uvicorn backend.main:app --host 0.0.0.0 --port 10000"
+    startCommand: "bash start.sh"
