--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,4 @@
 fastapi
-uvicorn[standard]
-numpy
-faiss-cpu
-python-dotenv
-sentence-transformers
-torch --index-url https://download.pytorch.org/whl/cpu
+uvicorn
+requests
+sqlite-utils
