--- a/render.yaml
+++ b/render.yaml
@@ -2,6 +2,5 @@ services:
   - type: web
     name: company-brain
     env: python
-    plan: free
     buildCommand: pip install -r requirements.txt
-    startCommand: bash start.sh
+    startCommand: ./start.sh
